--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "darkaonline/l5-swagger": "5.8.*",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
+        "orangehill/iseed": "^2.6",
         "zircote/swagger-php": "^3.0"
     },
     "require-dev": {
