--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "arrilot/laravel-widgets": "^3.13",
         "darkaonline/l5-swagger": "5.8.*",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
