--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "orangehill/iseed": "^2.6",
-        "zircote/swagger-php": "^3.0"
+        "zircote/swagger-php": "2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
